Fix - sui-wrap margin on smaller than 782px.)

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -16,6 +16,9 @@
 		letter-spacing: $font--letter-spacing;
 		text-rendering: optimizeLegibility;
 		margin: $sui-gutter $sui-gutter 0 ($sui-gutter - 20px); // Account for padding from #wpcontent.
+		@media (max-width: 782px){
+			margin: $sui-gutter ($sui-gutter - 10px) 0 ($sui-gutter - 20px); // Account for padding from #wpcontent.
+		}
 	}
 
 }
